# igi

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  bundle.sh
.github/workflows/: ci.yml
assets/: .gitkeep
docs/: ARCHITECTURE.md  CHUNKSTONES  CROSS_PLATFORM_PLAN.md  CROSS_PLATFORM_TODO.md  DECISIONS.md  FRD.md  MDM_DEPLOYMENT.md  PIPELINE_DIAGRAMS.md  PRD.md  PROBLEM_STATEMENT.md  REPOSITORY_STRUCTURE.md  RISK_REGISTER.md  SCOPE_AND_MILESTONES.md  SRD.md  THREAT_MODEL.md
igi_linux_win/: CMakeLists.txt
igi_linux_win/src/: SearchSession.cpp  SearchSession.h  main.cpp
igi_linux_win/src/core/: ActiveWindowInspector.h  ActiveWindowInspector_win.cpp  HotkeyListener.h  HotkeyListener_linux.cpp  SecureWipe.h  SecurityGuard_linux.cpp  SecurityGuard_win.cpp
igi_linux_win/src/ocr/: ImageConverter.h  OcrEngine.cpp
igi_linux_win/src/ui/: SearchOverlay.cpp  SearchOverlay.h
igi_linux_win/tests/: CMakeLists.txt  daemon_test.cpp  fuzzy_search_test.cpp  main.cpp  ocr_engine_test.cpp  smoke_test.cpp
resources/: AppIcon.icns  Igi.entitlements  Info.plist  igi.sb  resources.qrc
scripts/: sandbox_test.sh  sign_and_notarize.sh  verify_deps.py  verify_deps.sh
src/: SearchSession.cpp  SearchSession.h  main.cpp
src/core/: ActiveWindowInspector.h  ActiveWindowInspector.mm  ActiveWindowInspector_linux.cpp  AppPolicy.mm  Daemon.cpp  Daemon.h  HotkeyListener.mm  HotkeyListener_win.cpp  Permissions.h  Permissions.mm  Permissions_stub.cpp  PlatformHotkey.h  ScreenCapture.h  ScreenCapture.mm  ScreenCapture_qt.cpp  ScreenGeometry.cpp  ScreenGeometry.h  SecurityGuard.h  SecurityGuard.mm
src/ocr/: ImageConverter.cpp  OcrEngine.cpp  OcrEngine.h
src/search/: BoundingBox.h  FuzzySearch.cpp  FuzzySearch.h
src/ui/: CaptureFlashOverlay.cpp  CaptureFlashOverlay.h  SearchOverlay.cpp  SearchOverlay.h
tests/: CMakeLists.txt  hotkey_listener_test.cpp  image_converter_test.cpp  ocr_engine_test.cpp  screen_geometry_test.cpp
